re-use Database purger in api/Behat and e2e/Cypress tests

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1672,3 +1672,5 @@ services:
       $standtrackApiKey: '%env(STANDTRACK_API_KEY)%'
 
   AppBundle\Utils\Defaults: ~
+
+  AppBundle\Fixtures\DatabasePurger: ~
