--- a/.github/actions/run-coopcycle-web/action.yml
+++ b/.github/actions/run-coopcycle-web/action.yml
@@ -5,7 +5,9 @@ runs:
   steps:
   - name: Create .env file
     shell: bash
-    run: cp .env.dist .env
+    run: |
+      cp .env.dist .env
+      sed -i -e 's/APP_ENV=dev/APP_ENV=test/g' .env
   - name: Pull Docker images
     shell: bash
     run: docker compose pull --ignore-pull-failures
