--- a/config/services.yaml
+++ b/config/services.yaml
@@ -988,20 +988,10 @@ services:
     arguments:
       $centrifugoNamespace: '%centrifugo_namespace%'
 
+  # FIXME Won't work in 2.7
   AppBundle\EventListener\RestaurantFilterConfigurator:
     tags:
       - { name: kernel.event_listener, event: kernel.request, priority: 5 }
-
-  AppBundle\Api\DataProvider\RestaurantCollectionDataProvider:
-    parent: 'api_platform.doctrine.orm.collection_data_provider'
-    tags:
-      - { name: 'api_platform.collection_data_provider', priority: 2 }
-    calls:
-      - setRestaurantFilter: ['@coopcycle.utils.restaurant_filter']
-      - setTimingRegistry: ['@AppBundle\Service\TimingRegistry']
-    autoconfigure: false
-    autowire: false
-    public: false
 
   AppBundle\Api\DataProvider\TaskListCollectionDataProvider:
     parent: 'api_platform.doctrine.orm.collection_data_provider'
