--- a/cypress/fixtures/stores_excl_setup.yml
+++ b/cypress/fixtures/stores_excl_setup.yml
@@ -1,6 +1,6 @@
 # 'excl_setup' means that the file does not include the 'setup.yml' file; see the 'setup.yml' file for more information.
 include:
-  - admin_user.yml
+  - user_admin.yml
   - user_courier.yml
   - addresses.yml
   - packages.yml
