Adding missing .env.test vars.

--- a/.env.test
+++ b/.env.test
@@ -4,3 +4,15 @@ COOPCYCLE_MAIL_URL=smtp://smtp:25
 COOPCYCLE_MAIL_TRANSPORT=smtp
 COOPCYCLE_MAIL_SENDER_ADDRESS=hello@coopcycle.dev
 COOPCYCLE_MAIL_SENDER_NAME=CoopCycle
+COOPCYCLE_COUNTRY=fr
+COOPCYCLE_LOCALE=fr
+COOPCYCLE_REGION=fr
+FORCE_STRIPE=0
+STRIPE_CONNECT_REQUIRED=1
+STRIPE_PUBLISHABLE_KEY=key
+STRIPE_SECRET_KEY=secret_key
+STRIPE_CONNECT_CLIENT_ID=client_id
+INSEE_API_KEY=
+INSEE_API_SECRET=
+INSEE_PORTAIL_API_KEY=key
+#FIREBASE_CREDENTIALS=../coopcycle-app/android/app/google-services.json
