--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -246,6 +246,7 @@ services:
       - ./cube.js:/cube/conf/cube.js
     logging:
       driver: none
+    attach: false
 
   typesense:
     image: typesense/typesense:0.22.2
@@ -258,6 +259,7 @@ services:
       - typesense_data:/data
     logging:
       driver: none
+    attach: false
 
   storybook-react:
     build:
