--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "jest": "jest --config jest.config.js",
+    "e2e": "cypress run --browser chrome --headless --no-runner-ui",
     "sdk:watch": "webpack --config webpack.sdk.config.js --watch",
     "sdk:build": "webpack --config webpack.sdk.config.js --mode production",
     "storybook": "storybook dev -p 6006",
