revert: test-env session storage

--- a/config/packages/test/framework.yaml
+++ b/config/packages/test/framework.yaml
@@ -3,6 +3,8 @@ imports:
 
 framework:
     test: ~
+    session:
+      storage_id: session.storage.mock_file
     cache:
         prefix_seed: "%database_name%_test"
         app: cache.adapter.array
