--- a/.github/workflows/test_e2e.yml
+++ b/.github/workflows/test_e2e.yml
@@ -33,9 +33,8 @@ jobs:
           # https://symfony.com/doc/current/frontend/encore/installation.html
           # https://github.com/cypress-io/github-action?tab=readme-ov-file#build-app
           # build: npm run dev
-          # FIXME; WIP; debugging failing test; revert when finished
           spec: |
-            cypress/e2e/package-delivery/import/deliveries.cy.js
+            cypress/e2e/**/*.cy.js
         # after the test run completes store videos and any screenshots
       - name: Upload images for failed tests
         uses: actions/upload-artifact@v4
