--- a/.github/actions/run-coopcycle-web/action.yml
+++ b/.github/actions/run-coopcycle-web/action.yml
@@ -7,7 +7,8 @@ runs:
     shell: bash
     run: |
       cp .env.dist .env
-      sed -i -e 's/APP_ENV=dev/APP_ENV=test/g' .env
+#      FIXME: That might be not necessary
+#      sed -i -e 's/APP_ENV=dev/APP_ENV=test/g' .env
   - name: Pull Docker images
     shell: bash
     run: docker compose pull --ignore-pull-failures
