--- a/config/services.yaml
+++ b/config/services.yaml
@@ -240,7 +240,7 @@ services:
 
   AppBundle\LoopEat\ContextInitializer:
     arguments:
-      $processingFee: "%env(int:LOOPEAT_PROCESSING_FEE)%"
+      $processingFee: "%env(LOOPEAT_PROCESSING_FEE)%"
       $processingFeeBehavior: "%env(LOOPEAT_PROCESSING_FEE_BEHAVIOR)%"
     tags:
       - { name: monolog.logger, channel: loopeat }
