--- a/config/packages/test/framework.yaml
+++ b/config/packages/test/framework.yaml
@@ -5,6 +5,7 @@ framework:
     test: ~
     session:
       storage_id: session.storage.mock_file
+      cookie_secure: false
     cache:
         prefix_seed: "%database_name%_test"
         app: cache.adapter.array
