enable mock geocoder via settings

--- a/.env.test
+++ b/.env.test
@@ -4,3 +4,4 @@ COOPCYCLE_MAIL_URL=smtp://smtp:25
 COOPCYCLE_MAIL_TRANSPORT=smtp
 COOPCYCLE_MAIL_SENDER_ADDRESS=hello@coopcycle.dev
 COOPCYCLE_MAIL_SENDER_NAME=CoopCycle
+COOPCYCLE_GEOCODER_AUTOCONF_ENABLED=0
