--- a/cypress/fixtures/setup_default.yml
+++ b/cypress/fixtures/setup_default.yml
@@ -1,8 +1,11 @@
-# There are two ways to load the 'setup' fixtures:
-# 1. using --setup (-s) option: bin/console coopcycle:fixtures:load -s cypress/fixtures/setup.yml
-# that will load and PERSIST all the fixtures from setup.yml
+# Default setup fixtures suitable for most of the tests,
+# unless specific customization is needed.
+#
+# There are two ways to load the 'default setup' fixtures:
+# 1. using --setup (-s) option: bin/console coopcycle:fixtures:load -s cypress/fixtures/setup_default.yml
+# that will load and PERSIST all the fixtures from setup_default.yml
 # 2. using the `include` directive in the fixtures files
-# that will only load the fixtures from setup.yml, but they will NOT be persisted yet
+# that will only load the fixtures from setup_default.yml, but they will NOT be persisted yet
 # which might prevent some other fixtures that expect a certain database state from being loaded
 # For example, a fixture that creates an On Demand Delivery order expects both On Demand Delivery product
 # and taxes to be present in the database
@@ -12,6 +15,7 @@ include:
   - ../../fixtures/ORM/sylius_channels.yml
   - sylius_currency.yml
   - sylius_taxation.yml
+  - settings_default.yml
   - settings_payments.yml
   - payment_methods.yml
   - sylius_on_demand_delivery_product.yml
