--- a/config/packages/test/framework.yaml
+++ b/config/packages/test/framework.yaml
@@ -4,6 +4,7 @@ imports:
 framework:
     test: ~
     session:
+      handler_id: 'session.handler.native_file'
       storage_id: session.storage.mock_file
       cookie_secure: false
     cache:
