--- a/config/services.yaml
+++ b/config/services.yaml
@@ -82,6 +82,7 @@ services:
     public: false
     bind:
       $locale: "%env(COOPCYCLE_LOCALE)%"
+      $country: "%country_iso%"
 
   # For some cache pools, want *STABLE* cache keys between deploys.
   # To achieve this, we *EXPLICITLY* set a namespace,
@@ -124,9 +125,19 @@ services:
   AppBundle\Api\DataTransformer\:
     resource: '../src/Api/DataTransformer/*'
 
+  AppBundle\Api\DataTransformer\DeliveryInputDataTransformer:
+    arguments:
+      $normalizer: '@api_platform.jsonld.normalizer.item'
+
   AppBundle\Api\Filter\:
     resource: '../src/Api/Filter/*'
     tags: ['api_platform.filter']
+
+  AppBundle\ExpressionLanguage\:
+    resource: '../src/ExpressionLanguage/*'
+
+  AppBundle\Pricing\:
+    resource: '../src/Pricing/*'
 
   coopcycle.repository.restaurant: '@AppBundle\Entity\RestaurantRepository'
 
@@ -578,6 +589,12 @@ services:
         - '@AppBundle\ExpressionLanguage\PricePercentageExpressionLanguageProvider'
         - '@AppBundle\ExpressionLanguage\PricePerPackageExpressionLanguageProvider'
 
+  AppBundle\Pricing\PriceCalculationVisitor:
+    arguments:
+      $expressionLanguage: "@coopcycle.expression_language"
+    tags:
+      - { name: monolog.logger, channel: fee_calculation }
+
   AppBundle\EventListener\RegistrationListener:
     tags:
       - { name: kernel.event_subscriber }
@@ -600,10 +617,6 @@ services:
       - { name: monolog.logger, channel: coopcycle.tagging }
 
   AppBundle\Service\DeliveryManager:
-    arguments:
-      $expressionLanguage: "@coopcycle.expression_language"
-    tags:
-      - { name: monolog.logger, channel: fee_calculation }
 
   AppBundle\Utils\PreparationTimeCalculator:
     arguments:
@@ -1559,8 +1572,6 @@ services:
   AppBundle\Service\Tile38Helper:
     arguments:
       $fleetKey: '%tile38_fleet_key%'
-
-  AppBundle\Pricing\PricingManager: ~
 
   AppBundle\Form\BusinessAccountRegistrationFlow:
     autoconfigure: true
