Creating new cy commands `loadFixtures` and `loadFixturesWithSetup`. Using'em from all cy tests.

--- a/.env.test
+++ b/.env.test
@@ -15,4 +15,6 @@ STRIPE_CONNECT_CLIENT_ID=client_id
 INSEE_API_KEY=
 INSEE_API_SECRET=
 INSEE_PORTAIL_API_KEY=key
+COOPCYCLE_AUTOCOMPLETE_ADAPTER=geocode-earth
+GEOCODE_EARTH_API_KEY=YOUR_API_KEY
 #FIREBASE_CREDENTIALS=../coopcycle-app/android/app/google-services.json
