Little tech debt (#4970)
* Adding user_dispatcher.yml fixture, renaming user_admin.yml fixture and fixing admin_invite_dispatcher.cy.js.

* Adding missing .env.test vars.

* Adding `attach: false` for `typesense` and `cube` at `docker-compose.yml`.

* Fixing a warning about unsafe git directory.

* Creating a dispatcher user for demo at `InitDemoCommand.php`.

* Adding new `e2e` script at `package.json`.

* Adding handy targets for `Makefile`.

* Fixing failing cypress test at `address-autosuggest.yml`.

* A few adjustments for `Makefile`.

* Some more `Makefile` adjustments.

* Some adjustments to cypress's `commands.js` file.

* Trying to fix some cypress tests.

* Fixing some cypress tests and using `cy.symfonyConsole` and `cy.login` everywhere.

* Fixing another randomly failing cypress test?

* Fixing a behat test.

* Trying to fix random failing cypress tests.

* Creating cypress `urlmatch` command.

* Using cypress `urlmatch` command.

* Removing manual call to `cy.visit('/login')` since it's now already done inside `cy.login(..)`.

* Trying to fix random failing cypress tests.

* Trying to fix random failing cypress tests.

* Trying to fix random failing cypress tests.

* Trying to fix random failing cypress tests.

* Trying to fix random failing cypress tests.

* Upgrading `cypress` from `13.15.0` to `14.3.2`.

* Fixing cypress' component tests.

* Increasing `runMode` retries to 4.

* Making some final adjustments from PR's feedback comments.

* Creating new cypress command `getIfExists` and using it to fix `update_price.cy.js` test.

* Little fix for `testdata` makefile's targets.

* Reverting change for `foodtech.yml` cypress' fixture.

* Fixing `invoicing/export_data_for_invoicing.cy.js` test that starts to fail when running in the last day of the month.

* Trying to fix random failing cypress tests.

* Setting an absurdly high retry num for runmode (will revert if doesn't work).

* Creating new cy commands `loadFixtures` and `loadFixturesWithSetup`. Us

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -247,6 +247,7 @@ services:
       - ./cube.js:/cube/conf/cube.js
     logging:
       driver: none
+    attach: false
 
   typesense:
     image: typesense/typesense:0.22.2
@@ -259,6 +260,7 @@ services:
       - typesense_data:/data
     logging:
       driver: none
+    attach: false
 
   storybook-react:
     build:
