--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "jest": "jest --config jest.config.js",
+    "e2e": "cypress run --browser chrome --headless --no-runner-ui",
     "sdk:watch": "webpack --config webpack.sdk.config.js --watch",
     "sdk:build": "webpack --config webpack.sdk.config.js --mode production",
     "storybook": "storybook dev -p 6006",
@@ -18,11 +19,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@cypress/react18": "^2.0.1",
-    "@cypress/webpack-preprocessor": "^6.0.2",
+    "cypress": "^14.3.2",
+    "@cypress/webpack-preprocessor": "^6.0.4",
     "@geoman-io/leaflet-geoman-free": "^2.17.0",
     "@hello-pangea/dnd": "^16.5.0",
-    "cypress": "^13.15.0",
     "dotenv": "^8.6.0",
     "form-data": "^2.3.3",
     "google-libphonenumber": "^3.2.40",
