--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1013,17 +1013,13 @@ services:
     tags:
       - { name: 'api_platform.doctrine.orm.query_extension.collection', priority: -18 }
 
-  AppBundle\Api\DataProvider\InvoiceLineItemGroupedByOrganizationCollectionDataProvider:
+  AppBundle\Api\State\InvoiceLineItemsGroupedByOrganizationProvider:
     arguments:
       $collectionExtensions: !tagged api_platform.doctrine.orm.query_extension.collection
-    tags:
-      - { name: 'api_platform.collection_data_provider', priority: 2 }
 
-  AppBundle\Api\DataProvider\InvoiceLineItemCollectionDataProvider:
+  AppBundle\Api\State\InvoiceLineItemsProvider:
     arguments:
       $collectionExtensions: !tagged api_platform.doctrine.orm.query_extension.collection
-    tags:
-      - { name: 'api_platform.collection_data_provider', priority: 2 }
 
   AppBundle\Utils\RestaurantFilter:
     arguments:
