--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1003,11 +1003,9 @@ services:
     tags:
       - { name: kernel.event_listener, event: kernel.request, priority: 5 }
 
-  AppBundle\Api\DataProvider\TaskCollectionDataProvider:
+  AppBundle\Api\State\TasksProvider:
     arguments:
       $collectionExtensions: !tagged api_platform.doctrine.orm.query_extension.collection
-    tags:
-      - { name: 'api_platform.collection_data_provider', priority: 2 }
 
   AppBundle\Api\DataProvider\RestaurantPledgeFilterExtension:
     tags:
