--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1014,6 +1014,8 @@ services:
     arguments:
       $collectionExtensions: !tagged api_platform.doctrine.orm.query_extension.collection
 
+  AppBundle\Api\Dto\DeliveryFormDeliveryMapper:
+
   AppBundle\Utils\RestaurantFilter:
     arguments:
       - '@routing_service'
