--- a/composer.json
+++ b/composer.json
@@ -173,7 +173,8 @@
         "twig/extra-bundle": "^2.12|^3.0",
         "symfony/workflow": "5.4.*",
         "symfony/lock": "5.4.*",
-        "symfony/proxy-manager-bridge": "5.4.*"
+        "symfony/proxy-manager-bridge": "5.4.*",
+        "phpstan/phpdoc-parser": "^1.33"
     },
     "require-dev": {
         "symfony/debug-bundle": "*",
