--- a/composer.json
+++ b/composer.json
@@ -138,7 +138,7 @@
         "geocoder-php/google-maps-provider": "^4.6",
         "azimolabs/apple-sign-in-php-sdk": "^2.0",
         "google/apiclient": "^2.11",
-        "theofidry/alice-data-fixtures": "^1.6.0",
+        "theofidry/alice-data-fixtures": "~1.7.2",
         "php-http/guzzle7-adapter": "^1.0",
         "shahonseven/php-color-hash": "dev-master",
         "league/oauth2-server-bundle": "^0.3.0",
