--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@babel/core": "^7.27.1",
     "@babel/plugin-proposal-object-rest-spread": "^7.19.4",
     "@babel/preset-react": "^7.27.1",
     "@babel/register": "^7.27.1",
@@ -63,7 +64,7 @@
     "@symfony/stimulus-bridge": "^3.2.2",
     "@symfony/ux-react": "file:vendor/symfony/ux-react/assets",
     "@symfony/ux-turbo": "file:vendor/symfony/ux-turbo/assets",
-    "@symfony/webpack-encore": "^1.1.2",
+    "@symfony/webpack-encore": "^4.7.0",
     "animate.css": "^4.1.1",
     "antd": "^4.24.5",
     "autoprefixer": "^10.4.13",
@@ -92,14 +93,14 @@
     "deep-object-diff": "^1.1.9",
     "downshift": "^7.0.4",
     "dropzone": "^5.9.3",
-    "eslint": "^7.32.0",
+    "eslint": "^8.57.1",
     "eslint-plugin-cypress": "^3.3.0",
-    "eslint-plugin-jest": "^24.7.0",
+    "eslint-plugin-jest": "^28.11.0",
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-compiler": "^19.0.0-beta-63e3235-20250105",
     "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-storybook": "^0.6.15",
-    "eslint-webpack-plugin": "^2.6.0",
+    "eslint-plugin-storybook": "^0.12",
+    "eslint-webpack-plugin": "^4",
     "font-awesome": "^4.7.0",
     "fontawesome-markers": "^4.6.1",
     "formik": "^2.4.6",
@@ -123,7 +124,7 @@
     "leaflet-swoopy": "^3.4.1",
     "leaflet.markercluster": "^1.5.3",
     "less": "^4.1.2",
-    "less-loader": "^10.0.0",
+    "less-loader": "^12.0.0",
     "libphonenumber-js": "^1.10.14",
     "locutus": "^2.0.16",
     "lottie-web": "^5.9.6",
@@ -136,7 +137,7 @@
     "object-hash": "^2.2.0",
     "papaparse": "^5.5.3",
     "payment-icons": "^1.2.1",
-    "postcss-loader": "^6.0.0",
+    "postcss-loader": "^8.0.0",
     "prettier": "^3.5.3",
     "prismjs": "^1.29.0",
     "prop-types": "^15.8.1",
@@ -167,7 +168,7 @@
     "reselect": "^4.1.7",
     "rrule": "^2.7.1",
     "sass": "^1.56.1",
-    "sass-loader": "^12.0.0",
+    "sass-loader": "^13.0.0",
     "scheduler": "^0.23.0",
     "skeleton-screen-css": "^1.1.0",
     "sortablejs": "^1.15.0",
@@ -178,6 +179,8 @@
     "to-string-loader": "^1.2.0",
     "url-loader": "^4.1.1",
     "use-deep-compare": "^1.1.0",
+    "webpack": "^5.99.9",
+    "webpack-cli": "^5.1.4",
     "x-data-spreadsheet": "^1.1.9"
   }
 }
