--- a/package.json
+++ b/package.json
@@ -96,8 +96,8 @@
     "eslint": "^8.57.1",
     "eslint-plugin-cypress": "^3.3.0",
     "eslint-plugin-jest": "^28.11.0",
-    "eslint-plugin-react": "^7.31.10",
-    "eslint-plugin-react-compiler": "^19.0.0-beta-63e3235-20250105",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-compiler": "^19.1.0-rc.2",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-storybook": "^0.12",
     "eslint-webpack-plugin": "^4",
