--- a/config/packages/sylius_resource.yaml
+++ b/config/packages/sylius_resource.yaml
@@ -43,6 +43,9 @@ sylius_product:
         product_variant:
             classes:
                 model: AppBundle\Entity\Sylius\ProductVariant
+            translation:
+                classes:
+                    model: AppBundle\Entity\Sylius\ProductVariantTranslation
         product_option:
             classes:
                 model: AppBundle\Entity\Sylius\ProductOption
