--- a/src/Resources/config/routing/admin.yml
+++ b/src/Resources/config/routing/admin.yml
@@ -594,8 +594,8 @@ admin_store_recurrence_rules:
       store_recurrence_rule: admin_store_recurrence_rule
   methods:  [ GET ]
 
-admin_store_delivery_new:
-    path: /admin/stores/{id}/deliveries/new
+admin_store_delivery_new_legacy:
+    path: /admin/stores/{id}/deliveries/new/legacy
     defaults:
         _controller: AppBundle\Controller\AdminController::newStoreDeliveryAction
         layout: 'admin.html.twig'
@@ -606,8 +606,8 @@ admin_store_delivery_new:
             back: admin_deliveries
     methods:  [ GET, POST ]
 
-admin_store_delivery_new_beta:
-    path: /admin/stores/{id}/deliveries/new/beta
+admin_store_delivery_new:
+    path: /admin/stores/{id}/deliveries/new
     defaults:
         _controller: AppBundle\Controller\AdminController::newStoreDeliveryReactFormAction
         layout: 'admin.html.twig'
@@ -618,8 +618,8 @@ admin_store_delivery_new_beta:
             back: admin_deliveries
     methods:  [ GET ]
 
-admin_delivery:
-  path: /admin/deliveries/{id}
+admin_delivery_legacy:
+  path: /admin/deliveries/{id}/legacy
   defaults:
       _controller: AppBundle\Controller\AdminController::deliveryAction
       layout: 'admin.html.twig'
@@ -629,8 +629,8 @@ admin_delivery:
   methods:  [ GET, POST ]
 
 
-admin_delivery_beta:
-  path: /admin/deliveries/{id}/beta
+admin_delivery:
+  path: /admin/deliveries/{id}
   defaults:
       _controller: AppBundle\Controller\AdminController::deliveryItemReactFormAction
       layout: 'admin.html.twig'
