--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,6 @@
         "symfony/dotenv": "*",
         "symfony/twig-bundle": "*",
         "symfony/redis-messenger": "*",
-        "symfony/amqp-messenger": "*",
         "symfony/doctrine-messenger": "*",
         "symfony/monolog-bundle": "*",
         "symfony/runtime": "*",
@@ -52,14 +51,14 @@
         "symfony/cache": "*",
         "symfony/webpack-encore-bundle": "^1.6",
         "friendsofsymfony/rest-bundle": "^3.0",
-        "friendsofsymfony/jsrouting-bundle": "^2.2",
+        "friendsofsymfony/jsrouting-bundle": "^3",
         "api-platform/core": "^2.7",
         "doctrine/orm": "^2.7",
         "doctrine/doctrine-bundle": "^2.4",
         "nelmio/cors-bundle": "~2.0",
         "lexik/jwt-authentication-bundle": "^2.8",
         "jsor/doctrine-postgis": "^2.3.0",
-        "league/geotools": "@stable",
+        "league/geotools": "^1.2",
         "gedmo/doctrine-extensions": "^3.19",
         "snc/redis-bundle": "4.3.0",
         "knplabs/knp-time-bundle": "^2.0",
@@ -72,9 +71,9 @@
         "guzzlehttp/guzzle": "^7.0",
         "myclabs/php-enum": "^1.8",
         "beberlei/doctrineextensions": "^1.0",
-        "sentry/sentry-symfony": "^4.0",
+        "sentry/sentry-symfony": "^5.0",
         "ramsey/uuid-doctrine": "^1.6",
-        "ramsey/uuid": "^3.9",
+        "ramsey/uuid": "^4.0",
         "nesbot/carbon": "^2.0",
         "sylius/taxation-bundle": "^1.7.5",
         "craue/config-bundle": "~2.0",
@@ -99,11 +98,11 @@
         "sylius/promotion-bundle": "^1.7.5",
         "notfloran/mjml-bundle": "^3.0",
         "martin-georgiev/postgresql-for-doctrine": "^1.3",
-        "hautelook/alice-bundle": "~2.9.0",
+        "hautelook/alice-bundle": "^2.10.0",
         "nyholm/psr7": "^1.1",
-        "hwi/oauth-bundle": "^1.3.0",
+        "hwi/oauth-bundle": "^2",
         "php-http/httplug-bundle": "^1.16",
-        "m6web/daemon-bundle": "^6.0",
+        "m6web/daemon-bundle": "^8.0",
         "azuyalabs/yasumi": "^2.1",
         "hashids/hashids": "^4.0",
         "sylius/inventory": "^1.7.5",
@@ -138,14 +137,13 @@
         "geocoder-php/google-maps-provider": "^4.6",
         "azimolabs/apple-sign-in-php-sdk": "^2.0",
         "google/apiclient": "^2.11",
-        "theofidry/alice-data-fixtures": "~1.7.2",
+        "theofidry/alice-data-fixtures": "^1.8.0",
         "php-http/guzzle7-adapter": "^1.0",
         "shahonseven/php-color-hash": "dev-master",
         "league/oauth2-server-bundle": "^0.3.0",
         "phpoffice/phpspreadsheet": "^1.23",
         "typesense/typesense-php": "^4.7",
-        "benjaminfavre/oauth2-http-client": "^1.0",
-        "sylius/calendar": "^0.3",
+        "sylius/calendar": "^0.4",
         "twig/markdown-extra": "^3.4",
         "league/commonmark": "^2.3",
         "acseo/typesense-bundle": "^0.8",
@@ -170,15 +168,15 @@
         "geocoder-php/geocode-earth-provider": "^1.4",
         "doctrine/dbal": "^3",
         "twig/extra-bundle": "^2.12|^3.0",
-        "symfony/workflow": "5.4.*",
-        "symfony/lock": "5.4.*",
-        "symfony/proxy-manager-bridge": "5.4.*",
+        "symfony/workflow": "*",
+        "symfony/lock": "*",
+        "symfony/proxy-manager-bridge": "*",
         "phpstan/phpdoc-parser": "^1.33"
     },
     "require-dev": {
         "symfony/debug-bundle": "*",
-        "symfony/stopwatch": "^6.4",
-        "symfony/web-profiler-bundle": "~6.0.0",
+        "symfony/stopwatch": "*",
+        "symfony/web-profiler-bundle": "*",
         "symfony/phpunit-bridge": "^5.0",
         "phpunit/phpunit": "^9.0",
         "behat/behat": "^3.7",
@@ -242,7 +240,7 @@
         "symfony-assets-install": "relative",
         "symfony": {
             "allow-contrib": true,
-            "require": "5.4.*"
+            "require": "6.4.*"
         },
         "drupal-core-vendor-hardening": {
             "api-platform/core": ["features", "tests"],
