--- a/config/packages/hwi_oauth.yaml
+++ b/config/packages/hwi_oauth.yaml
@@ -32,10 +32,10 @@ hwi_oauth:
     # [using the referring URL for form login](http://symfony.com/doc/2.0/cookbook/security/form_login.html#using-the-referring-url).
     # use_referer: true
 
-    fosub:
-        username_iterations: 30
-        properties:
-            facebook: facebookId
+    # fosub:
+    #     username_iterations: 30
+    #     properties:
+    #         facebook: facebookId
 
     # here you will add one (or more) configurations for resource owners
     # and other settings you want to adjust in this bundle, just checkout the list below!
