Disable HWI OAuth.

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -318,17 +318,18 @@ security:
             form_login:
                 provider: nucleos_userbundle
                 success_handler: coopcycle.web_success_handler
-            oauth:
-                resource_owners:
-                    facebook:             "/login/check-facebook"
-                login_path:        /login
-                use_forward:       false
-                failure_path:      /login
-                oauth_user_provider:
-                    service: coopcycle.user_provider
+            # oauth:
+            #     resource_owners:
+            #         facebook:             "/login/check-facebook"
+            #     login_path:        /login
+            #     use_forward:       false
+            #     failure_path:      /login
+            #     oauth_user_provider:
+            #         service: coopcycle.user_provider
             logout: true
             remember_me:
                 secret: '%secret%'
+            entry_point: form_login
 
         main:
             lazy: true
