Fix cache/array-adapter version (thephpleague/geotools#190).

--- a/composer.json
+++ b/composer.json
@@ -195,6 +195,9 @@
         "league/flysystem-memory": "^3.0",
         "rector/rector": "^1.2"
     },
+    "replace": {
+        "cache/array-adapter": "*"
+    },
     "repositories": [
         {
             "type": "vcs",
