--- a/composer.json
+++ b/composer.json
@@ -171,7 +171,8 @@
         "symfony/workflow": "*",
         "symfony/lock": "*",
         "symfony/proxy-manager-bridge": "*",
-        "phpstan/phpdoc-parser": "^1.33"
+        "phpstan/phpdoc-parser": "^1.33",
+        "benjaminfavre/oauth2-http-client": "^3.0"
     },
     "require-dev": {
         "symfony/debug-bundle": "*",
