--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1003,7 +1003,7 @@ services:
     arguments:
       $collectionExtensions: !tagged api_platform.doctrine.orm.query_extension.collection
 
-  AppBundle\Api\Dto\DeliveryFormDeliveryMapper:
+  AppBundle\Api\Dto\DeliveryMapper:
 
   AppBundle\Utils\RestaurantFilter:
     arguments:
