added missing fields to TaskDto

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1004,6 +1004,7 @@ services:
       $collectionExtensions: !tagged api_platform.doctrine.orm.query_extension.collection
 
   AppBundle\Api\Dto\DeliveryMapper:
+  AppBundle\Api\Dto\TaskMapper:
 
   AppBundle\Utils\RestaurantFilter:
     arguments:
