Decorate NativeSessionStorageFactory for embed feature.

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1635,3 +1635,7 @@ services:
     arguments:
       - '@AppBundle\LoopEat\Client'
       - '@monolog.logger.loopeat'
+
+  AppBundle\Session\NativeSessionStorageFactory:
+    decorates: session.storage.factory.native
+    arguments: ['@.inner']
