--- a/config/packages/test/framework.yaml
+++ b/config/packages/test/framework.yaml
@@ -4,7 +4,7 @@ imports:
 framework:
     test: ~
     session:
-      handler_id: 'session.handler.native_file'
+      handler_id: ~
       storage_factory_id: session.storage.factory.mock_file
       cookie_secure: false
     cache:
