--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -155,11 +155,10 @@ services:
       - MINIO_SECRET_KEY=${S3_CREDENTIALS_SECRET}
       - MINIO_REGION=${S3_REGION}
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
-      interval: 10s
+      test: ["CMD", "mc", "ready", "local"]
+      interval: 5s
+      timeout: 5s
       retries: 5
-      start_period: 30s
-      timeout: 10s
 
   # https://github.com/minio/minio/issues/4882
   # https://docs.min.io/docs/minio-client-complete-guide#policy
